--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   localstack:
     image: localstack/localstack
-    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
+    container_name: localstack
     hostname: localstack
     environment:
       - SERVICES=sqs
@@ -17,9 +17,21 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:4566/_localstack/health"]
-      interval: 5s
+      interval: 2s
       timeout: 3s
       retries: 3
+    networks:
+      food-order-network:
+        aliases:
+        - localstack
+
+  database:
+    image: postgres:15
+    container_name: food_order_database
+    environment:
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - "5432:5432"
     networks:
       - food-order-network
 
@@ -27,16 +39,24 @@ services:
     container_name: food_order_pagamento
     env_file:
       - .env
+    environment:
+      - FOOD_ORDER_PAGAMENTO_HOSTNAME=food_order_database
     build:
       context: .
       dockerfile: ./Dockerfile
     ports:
       - "4000:4000"
+    command: sh -c "mix ecto.create && mix ecto.migrate && mix run --no-halt"
     depends_on:
       localstack:
         condition: service_healthy
+      database:
+        condition: service_started
     networks:
-      - food-order-network
+      food-order-network:
+        aliases:
+          - food_order_pagamento
+    dns_search: .
 
 networks:
   food-order-network:
